/**Responsible for validating the Node Agentâ€™s Attested Data.*/
syntax = "proto3";
package spire.agent.nodeattestor;
option go_package = "nodeattestor";

import public "github.com/spiffe/sri/pkg/common/plugin/plugin.proto";
import public "github.com/spiffe/sri/pkg/common/common.proto";



/**Represents a request to attest a node.*/
message AttestRequest {
    spire.common.AttestedData attestedData = 1; ///A type which contains attestation data for specific platform.
    bool attestedBefore = 2; ///Is true if the Base SPIFFE ID is present in the Attested Node table.
}

/**Represents a response when attesting a node.*/
message AttestResponse {
    bool valid = 1; ///True/False
    string baseSPIFFEID  = 2; ///Used for the Control Plane to validate the SPIFFE Id in the Certificate signing request.
}

service NodeAttestor {
    /**Responsible for configuration of the plugin.*/
    rpc Configure(spire.common.plugin.ConfigureRequest) returns (spire.common.plugin.ConfigureResponse);
    /**Returns the  version and related metadata of the installed plugin.*/
    rpc GetPluginInfo(spire.common.plugin.GetPluginInfoRequest) returns (spire.common.plugin.GetPluginInfoResponse);
    /**Attesta a node.*/
    rpc Attest(AttestRequest) returns (AttestResponse);
}
